fix: implement project review remediation